--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -8,6 +8,7 @@ body, #wrapper {
     height: 100%;
     min-height: 100%;
     font-family: sans-serif;
+    background-color: white;
 }
 /* Mobile Header Styles */
 
