--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -31,12 +31,12 @@ body, #wrapper {
 @media (max-width: 767px) {
   #header {
     position: fixed;
-    top: 100px;
+    top: 0px;
     left: 0;
     width: 100%;
       height: 13rem;
     z-index: 999;
-      background-color: red;
+      background-color: black;
   }
 
   #header h1 {
