--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -9,6 +9,8 @@ body,
     width: 100%;
     height: 100%;
     min-height: 100%;
+}
+body {
     font-family: 'PT Sans', sans-serif;
     background-color: #f2f2f2;
     position: absolute;
@@ -44,6 +46,10 @@ body,
     height: 150px;
     background-image: url(../assets/headicon.svg);
     margin: 20px auto;
+}
+#subheader .title {
+    font-size: 0.65em;
+    font-weight: 100;
 }
 #panel {
 /*    display: none;*/
@@ -102,7 +108,7 @@ h1 {
 }
 
 #logo {
-    background-color: white;
+    background-color: #fff;
 /*    position: absolute;*/
     position: fixed;
     width: 4.9rem;
@@ -114,6 +120,7 @@ h1 {
 /* Media query for mobile devices */
 @media (max-width: 767px) {
     #header {
+        height: 12rem;
     }
     #centered {
         position: relative;
