Another heading adj

--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -92,7 +92,7 @@ body {
     left: 0px;
     justify-content: left;
       align-items: flex-end;
-    background-color: #000;
+    background-color: #8e1515;
     height: 6.9rem;
     height: 120px;
     color: white;
