--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -92,9 +92,9 @@ body {
     left: 0px;
     justify-content: left;
       align-items: flex-end;
-    background-color: #8e1515;
+    background-color: #000;
     height: 6.9rem;
-    height: 120px;
+    height: 112px;
     color: white;
 /*    opacity: 0.5;*/
 }
