--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -129,3 +129,25 @@ h1 {
         height: 100%;
     }
 }
+#header {
+    height: 10.3rem;
+}
+#logo {
+    width: 7.2rem;
+    height: 7.2rem;
+    margin: 1.6rem 2.3rem;
+}
+h1 {
+    font-size: 2.7rem;
+    padding: 3.5rem 13rem;
+}
+#subheader {
+    padding-top: 260px;
+    font-size: 3.2rem;
+}
+
+#subheader #icon {
+    width: 210px;
+    height: 210px;
+    margin: 20px auto;
+}
