--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -47,6 +47,16 @@ body {
     background-image: url(../assets/headicon.svg);
     margin: 20px auto;
 }
+#subheader #crown {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-image: url(../assets/crown.png);
+    background-size: contain;
+    left: calc(50% + 50px);
+    top: 330px;
+/*    margin: 20px auto;*/
+}
 #subheader .title {
     font-size: 0.65em;
     font-weight: 100;
@@ -149,5 +159,5 @@ h1 {
 #subheader #icon {
     width: 210px;
     height: 210px;
-    margin: 20px auto;
+    margin: 10px auto;
 }
