--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -22,6 +22,8 @@ body {
     height: 100%;
     margin: 0px auto;
 }
+
+
 #subheader {
 /*    display: none;*/
     position: relative;
@@ -59,9 +61,88 @@ body {
 }
 #subheader .title {
     font-size: 0.65em;
-    font-weight: 100;
+    font-weight: 200;
 }
+#subheader #summary {
+    margin: 50px auto;
+    font-size: 3rem;
+    width: 650px;
+
+}
+
+/* Page - any screen other than the main menu */
+.page {
+    background-color: blue;
+    position: relative;
+    background-color: white;
+    width: calc(100% - 40px);
+    left: 20px;
+    min-height: 1200px;
+    border-radius: 16px;
+    text-align: center;
+    font-size: 1.8rem;
+/*    margin: 20px;*/
+/*    border: 40px solid blue;*/
+/*    border-radius: 30px;*/
+}
+.page p {
+    padding: 10px;
+}
+.page h3 {
+    padding: 40px 0px 20px 0px;
+}
+.backbutton {
+    position: absolute;
+    top: 25px;
+    left: 40px;
+    width: 30px;
+    height: 60px;
+    border-color: #5d5d5d;
+/*    background-color: blue;*/
+}
+.backbutton:before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -30px;
+    border: 30px solid transparent;
+    border-right-color: inherit;
+}
+.backbutton:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -26px;
+    border: 30px solid transparent;
+    border-right-color: white;
+}
+.backbutton:hover {
+    border-color: black;
+}
+/* end of Page */
+
+/* Specific pages */
+#resources-meter {
+    width: 350px;
+    height: 350px;
+    margin: 0 auto;
+    background-image: url(../assets/resources_meter.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#resources-meter p {
+    font-family: 'arial', sans-serif;
+    font-size: 9.6rem;
+    font-weight: bold;
+    padding: 120px 90px;
+    width: 200px;
+/*    background-color: red;*/
+    text-align: center;
+}
+/* end of Specific pages */
+
 #panel {
+    /* NOT USED??? */
 /*    display: none;*/
     position: relative;
     background-color: white;
@@ -73,7 +154,7 @@ body {
     min-height: 1200px;
     border-radius: 8px;
 }
-
+/* STACK ORDER */
 #header {
     z-index: 20;
 }
@@ -86,15 +167,14 @@ body {
 #header h1 {
     z-index: 30;
 }
+/* END STACK ORDER */
 #content {
     position: absolute;
     width: 100%;
     color: #000;
+/*    background-color: green;*/
 }
-#content div {
-/*    position: absolute;*/
-/*    width: 100%;*/
-}
+
 #header {
     position: fixed;
     display: flex;
@@ -116,6 +196,13 @@ h1 {
     font-size: 1.7rem;
     padding: 2.5rem 8.3rem;
     position: fixed;
+}
+h2 {
+    font-size: 3.2rem;
+}
+h3 {
+    font-size: 2.7rem;
+    font-weight: 200;
 }
 
 #logo {
@@ -149,15 +236,107 @@ h1 {
 }
 h1 {
     font-size: 2.7rem;
-    padding: 3.5rem 13rem;
+    padding: 3.5rem 12rem;
 }
 #subheader {
     padding-top: 260px;
     font-size: 3.2rem;
 }
 
+/* #subheader.sub - pages other than the main maenu (smaller version) */
+#subheader.sub {
+    padding-top: 190px;
+}
+#subheader.sub #yourep  {
+    display: none;
+}
+#subheader.sub #icon {
+    width: 120px;
+    height: 120px;
+}
+#subheader.sub #crown {
+    width: 58px;
+    height: 58px;
+    left: calc(50% + 29px);
+    top: 200px;
+}
+#subheader.sub #summary {
+    display: none;
+}
+
+
 #subheader #icon {
     width: 210px;
     height: 210px;
     margin: 10px auto;
+}
+
+.tile {
+    border-radius: 15px;
+    background-color: white;
+
+
+/*    height: 100%;*/
+}
+.tile.home .icon {
+/*    display: none;*/
+    position: relative;
+    width: 110px;
+/*    width: 100%;*/
+    height: 110px;
+    border-radius: 50%;
+    background-color: #B3B3B3;
+    margin: 30px auto 20px auto;
+}
+.tile.home .icon.resources  {
+    background-color: transparent;
+    background-image: url(../assets/resources.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 0px;
+    width: 150px;
+    margin-top: 80px;
+}
+.tile .title {
+     margin: 0 auto;
+/*    bottom: 0px;*/
+    position: relative;
+    width: 80%;
+/*    background-color: rgba(255, 255, 0, 0.52);*/
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+}
+
+.grid-container {
+    max-width: 600px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+}
+
+.button {
+    pointer-events: auto;
+    cursor: pointer;
+}
+.tile.button:hover {
+    outline: 5px solid #95C11F;
+}
+.button.inactive {
+    pointer-events: none;
+    cursor: default;
+    display: none;
+    opacity: 0.5;
+}
+
+
+
+
+.main.hidden {
+    /* KEEP THIS AT THE BOTTOM SO IT OVERWRITES OTHER RULES ON INIT */
+    display: none;
 }
