--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -14,6 +14,7 @@ body {
     font-family: 'PT Sans', sans-serif;
     background-color: #f2f2f2;
     position: absolute;
+    overflow-y: scroll;
 }
 #centered {
 /*    background-color: red;*/
@@ -77,7 +78,7 @@ body {
     background-color: white;
     width: calc(100% - 40px);
     left: 20px;
-    min-height: 1200px;
+    min-height: 600px;
     border-radius: 16px;
     text-align: center;
     font-size: 1.8rem;
