update to the debug messaging - release info/timestamps are now highlighted if an update is detected between visits.

--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -197,6 +197,10 @@ body {
     color: #85d66d;
 /*    pointer-events: none;*/
 }
+#debug .updated {
+    color: #b0d926;
+    font-weight: bold;
+}
 #debug:hover {
     color: #69fa3e;
 }
