--- a/css/mobilev1.css
+++ b/css/mobilev1.css
@@ -48,8 +48,14 @@ body {
     position: relative;
     width: 150px;
     height: 150px;
-    background-image: url(../assets/headicon.svg);
+    border-radius: 50%;
+    background-image: url(../assets/icon-selector.png);
+    background-size: contain;
+    background-color: #999999;
     margin: 20px auto;
+}
+#subheader.selected #icon {
+    background-image: url(../assets/headicon.svg);
 }
 #subheader #crown {
     position: absolute;
@@ -59,7 +65,10 @@ body {
     background-size: contain;
     left: calc(50% + 50px);
     top: 330px;
-/*    margin: 20px auto;*/
+    display: none;
+}
+#subheader.lead #crown {
+    display: block;
 }
 #subheader .title {
     font-size: 0.65em;
@@ -83,6 +92,7 @@ body {
     border-radius: 16px;
     text-align: center;
     font-size: 1.8rem;
+    overflow-x: scroll;
 /*    margin: 20px;*/
 /*    border: 40px solid blue;*/
 /*    border-radius: 30px;*/
@@ -140,6 +150,12 @@ body {
     width: 200px;
 /*    background-color: red;*/
     text-align: center;
+}
+
+#scroller {
+    width: 2000px;
+    height: 300px;
+    background-color: blue;
 }
 /* end of Specific pages */
 
@@ -325,6 +341,45 @@ h1 {
     line-height: 2.5rem;
 }
 
+.grid-containernot {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+}
+.grid-homenot {
+    max-width: 600px;
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;/
+    padding-bottom: 90px;
+}
+.grid-selector {
+/*    max-width: 600px;*/
+/*    margin: 0 auto;*/
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: 1fr;/
+/*    padding-bottom: 90px;*/
+}
+.grid-container-old {
+/*    max-width: 600px;*/
+/*    margin: 0 auto;*/
+    display: grid;
+/*    grid-template-columns: repeat(2, 1fr);*/
+/*    grid-auto-rows: 1fr;*/
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+/*    padding-bottom: 90px;*/
+}
+.grid-home-old {
+    max-width: 600px;
+    margin: 0 auto;
+/*    display: grid;*/
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
+/*    grid-column-gap: 30px;*/
+/*    grid-row-gap: 30px;*/
+    padding-bottom: 90px;
+}
 .grid-container {
     max-width: 600px;
     margin: 0 auto;
@@ -334,7 +389,6 @@ h1 {
     grid-column-gap: 30px;
     grid-row-gap: 30px;
     padding-bottom: 90px;
-/*    background-color: bisque;*/
 }
 
 .button {
