pre-switch commit (back to main branch)

--- a/css/styles.less
+++ b/css/styles.less
@@ -7,25 +7,21 @@
 @small: #F6C310;
 @public: #999999;
 
-
-.selector {
-//    background-color: @test;
-}
-.tile.home .icon.govt  {
+.tile.home#tile-govt .icon  {
     background-color: @govt;
 }
-.tile.home .icon.indiv {
+.tile.home#tile-indiv .icon {
     background-color: @indiv;
 }
-.tile.home .icon.welas {
+.tile.home#tile-weles .icon {
     background-color: @welas;
 }
-.tile.home .icon.civil {
+.tile.home#tile-civil .icon {
     background-color: @civil;
 }
-.tile.home .icon.small {
+.tile.home#tile-small .icon {
     background-color: @small;
 }
-.tile.home .icon.public {
+.tile.home#tile-public .icon {
     background-color: @public;
 }
